// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assetHolders should return all Asset Holders for a particular ticker 1`] = `
Object {
  "assetHolders": Object {
    "__typename": "AssetHoldersConnection",
    "nodes": Array [
      Object {
        "__typename": "AssetHolder",
        "amount": "999600",
        "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "id": "11BTICKER1/0x0500000000000000000000000000000000000000000000000000000000000000",
        "ticker": "11BTICKER1",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "100",
        "did": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
        "id": "11BTICKER1/0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
        "ticker": "11BTICKER1",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "100",
        "did": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
        "id": "11BTICKER1/0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
        "ticker": "11BTICKER1",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "100",
        "did": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
        "id": "11BTICKER1/0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
        "ticker": "11BTICKER1",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "100",
        "did": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
        "id": "11BTICKER1/0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
        "ticker": "11BTICKER1",
      },
    ],
  },
}
`;

exports[`assetHolders should return all Assets held by an Identity 1`] = `
Object {
  "assetHolders": Object {
    "__typename": "AssetHoldersConnection",
    "nodes": Array [
      Object {
        "__typename": "AssetHolder",
        "amount": "999900",
        "ticker": "11ATICKER",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "999600",
        "ticker": "11BTICKER1",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "100",
        "ticker": "11BTICKER2",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "999000",
        "ticker": "12TICKER",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "19900001500",
        "ticker": "13EARNED",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "900000000",
        "ticker": "13TICKER",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "960000",
        "ticker": "14TICKER",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "1600",
        "ticker": "14TICKERRAIS",
      },
    ],
  },
}
`;

exports[`assetHolders should return amount of Assets held by a particular Identity 1`] = `
Object {
  "assetHolders": Object {
    "__typename": "AssetHoldersConnection",
    "nodes": Array [
      Object {
        "__typename": "AssetHolder",
        "amount": "999600",
      },
    ],
  },
}
`;
